fix logo header

--- a/nova/css/theme.css
+++ b/nova/css/theme.css
@@ -9612,3 +9612,11 @@ ul.tag_input li img {
 	display: none;
     content: " ";
 }
+
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 18px;
+    line-height: 50px;
+}
