--- a/nova/css/theme.css
+++ b/nova/css/theme.css
@@ -5956,13 +5956,13 @@ ul.contextMenu li:hover {
 }
 
 .panel .panel-body img {
-	width: 50%;
+
 	height: auto;
-	max-height: 600px;
+	max-height: inherit;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 10px;
-	vertical-align: top
+	vertical-align: sub
 }
 
 .panel .panel-body p {
@@ -9585,13 +9585,12 @@ ul.tag_input li img {
 	margin-bottom: 10px;
 }
 .panel .panel-body img {
-    width: auto;
+
     height: auto;
-    max-height: 600px;
+	max-height: inherit;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    vertical-align: top;
     padding: 2px;
 }
 .post-files img {
