--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -3745,7 +3745,7 @@ img.bounceIn
 	margin-top: 2px;
 	min-width: 6em;
 	z-index: 15;
-	font-size: 11px;
+	font-size: 12px;
 }
 .ProsemirrorEditor .ProseMirror-menu-dropdown-item
 {
@@ -5113,10 +5113,10 @@ display: inline-block;
 		padding-right: 0px;
 
 	}
-	.col-md-12{
+	/* .col-md-12{
 		padding-right: 0px;
 		padding-left: 0px;
-	}
+	} */
 .layout-sidebar-container {
     display: none;
     width: auto;
@@ -7515,7 +7515,7 @@ video {
 }
 .ProsemirrorEditor.focusMenu .ProseMirror-menubar {
     color:#666;
-    font-size: 10px; /*текст выпадающего списка в редакторе */
+    font-size: 11px; /*текст выпадающего списка в редакторе */
 }
 
 .ProsemirrorEditor .ProseMirror-menuitem
