fix position modal window

--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -7534,4 +7534,22 @@ video {
 }
 /**/
 
+/* fix position modal window */
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+}
 
+body.modal-open {
+    height: inherit;
+    overflow-y: hidden;
+}
+/**/
