--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -3756,6 +3756,7 @@ img.bounceIn
 	min-width: 6em;
 	z-index: 15;
 	font-size: 12px;
+	display: table;
 }
 .ProsemirrorEditor .ProseMirror-menu-dropdown-item
 {
@@ -7586,7 +7587,7 @@ body.modal-open {
 
 .media-list.conversation-entry-list {
 
-    min-height: 150px;
+    min-height: 200px;
 
 }
 .btn-primary {
@@ -7594,6 +7595,13 @@ body.modal-open {
     background:#708fa0;
 
 color: #fff !important;
-    margin-bottom: 5px;
+	/* margin-bottom: 5px; */
+	
+}
+.ProseMirror.atwho-input.form-control.humhub-ui-richtext {
 
+
+}
+.ProsemirrorEditor.plainMenu .ProseMirror-menubar ~ .ProseMirror-focused{
+	border-color: #c9c9c9 !important;
 }
