--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -6418,8 +6418,8 @@ ul#account-top-menu {
     float: right;
 }
  .row {
-    /* margin-right: 0;
-    margin-left: 0; */
+    margin-right: 0;
+    margin-left: 0;
 } 
 
 .panel .panel-body {
