--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -7605,3 +7605,11 @@ color: #fff !important;
 .ProsemirrorEditor.plainMenu .ProseMirror-menubar ~ .ProseMirror-focused{
 	border-color: #c9c9c9 !important;
 }
+
+
+/**/
+
+.ProsemirrorEditor.plainMenu .ProseMirror-menu-group {
+    padding: 5px;
+    font-size: 12px;
+}
