--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -1327,12 +1327,12 @@ ul.tab-menu-settings li.active>a
 	border-radius: 3px;
 	box-shadow: none;
 	float: none;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: 600;
 	margin-bottom: 0;
 	moz-box-shadow: none;
 	outline: none !important;
-	padding: 8px 16px;
+	padding: 6px 12px;
 	text-shadow: none;
 	webkit-box-shadow: none;
 }
@@ -1351,7 +1351,7 @@ ul.tab-menu-settings li.active>a
 }
 .btn-sm i
 {
-	font-size: 14px;
+	font-size: 13px;
 }
 .btn-xs
 {
@@ -7626,4 +7626,41 @@ color: #fff !important;
 }
 .btn.btn-default.col-md-12 {
     padding: 10px 5px;
+}
+
+/**/
+
+#create-message-button {
+    position: absolute;
+    top: 0px !important;
+    right: 10px;
+    padding: 5px 10px;
+}
+
+
+.tab-menu .nav-tabs {
+
+    padding-left: 10px;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+
+}
+#profile-tabs {
+
+    white-space: nowrap;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    width: auto;
+
+}
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+
+    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+
 }
