--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -7693,3 +7693,14 @@ color: #fff !important;
     overflow: hidden;
     overflow-x: auto;
 }
+
+/* 09.06.20 */
+a.input-field-addon-sm {
+    float: right;
+    font-size: 11px;
+    margin-top: 0px;
+}
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    position: inherit;
+    display: initial;
+}
