--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -2644,7 +2644,7 @@ table td a:hover
 }
 .filter-root .row
 {
-	display: table !important;
+	display: inline-table !important;
 }
 .filter-root .filter-panel
 {
