--- a/HumHub-Nova/css/theme.css
+++ b/HumHub-Nova/css/theme.css
@@ -5242,8 +5242,11 @@ display: inline-block;
     padding: 2px;
 }
 .post-files img {
-    height: 100%!important;
-    width: 100%!important;
+    /* height: 100%!important;
+	width: 100%; */
+	display: inherit;
+	min-height: 100%;
+	min-width: 100%;
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
     object-fit: cover;
